--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.0",
     "node-sass": "^4.14.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
+    "router-dom": "^2.2.9",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
