--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node-sass": "^4.14.1",
     "react": "^18.2.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
     "router-dom": "^2.2.9",
     "typescript": "^4.7.4",
