--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "jwt-decode": "^3.1.2",
@@ -25,6 +26,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
     "router-dom": "^2.2.9",
+    "styled-components": "^5.3.9",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
