--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
     "router-dom": "^2.2.9",
+    "styled-component": "^2.8.0",
     "styled-components": "^5.3.9",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
