integrating select to react-hook-form

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-select": "^5.0.1",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
@@ -21,10 +22,11 @@
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "router-dom": "^2.2.9",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.9",
