--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/qs": "^6.9.7",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^5.0.1",
     "@types/styled-components": "^5.1.26",
@@ -22,8 +23,10 @@
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
+    "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.2",
